--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--ICONE DA PAGINAS-->
     <link rel="shortcut icon" href="">
     <!--LINK EXTERNO CSS-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/src/css/estilo.css">
 
     <title>Marvel</title>
 </head>
